hardcoded the username lets see

--- a/.drone.yml
+++ b/.drone.yml
@@ -22,7 +22,7 @@ steps:
 - name: deploy  
   image: plugins/gh-pages
   settings:
-    username: ${DRONE_REPO_OWNER}
+    username: amco3008
     password: a8c8de86093840c346fbf00f4af7aaa1b55219ae
     pages_directory: test-ci/dist/
     upstream_name: origin
