--- a/.drone.yml
+++ b/.drone.yml
@@ -23,7 +23,7 @@ steps:
   image: plugins/slack
   settings:
     webhook: 
-      from_secret: SLACK_WEBHOOK
+      from_secret: slack_webhook
     channel: drone-ci
     icon_url: https://unsplash.it/256/256/?random
     template: >
