--- a/.drone.yml
+++ b/.drone.yml
@@ -5,6 +5,7 @@ steps:
 - name: template
   image: lowess/preact-cli
   commands:
+  - export BASE_URL=https://${DRONE_REPO_OWNER}.github.io/preact-hugo
   - preact create ${DRONE_REPO_OWNER}/${DRONE_REPO_NAME}#${DRONE_COMMIT} test-ci
 
 - name: dependencies
@@ -17,7 +18,7 @@ steps:
   image: lowess/preact-cli
   commands:
   - cd test-ci
-  - npm run build:webpack && hugo -b http://amco3008.github.io/preact-hugo -d ../dist -s site -v
+  - npm run build
 
 - name: notify  
   image: plugins/slack
